Five new pages, minor edits

--- a/pages/asteroid-belt.html
+++ b/pages/asteroid-belt.html
@@ -19,7 +19,7 @@ link: asteroid-belt
                     Three years after their first congress, in 1801, Giuseppe Piazzi discovered <a href="ceres.html">Ceres</a> at the observatory in Palermo.
                 </p>
                 <p class="paragraph">
-                    After other members of the "celestial police" discovered other "planets" like <a href="pallas.html">Pallas</a>, Juno, and <a href="vesta.html">Vesta</a>, they started to suspect that they were not planets, but a new class of objects.
+                    After other members of the "celestial police" discovered other "planets" like <a href="pallas.html">Pallas</a>, <a href="juno-asteroid.html">Juno</a>, and <a href="vesta.html">Vesta</a>, they started to suspect that they were not planets, but a new class of objects.
                     Herschel suggested the term "asteroid" (star-like), since their apparent sizes were smaller than those of stars.
                     Titius-Bode law was later disproven by the discovery of <a href="neptune.html">Neptune</a>.
                 </p>
@@ -29,15 +29,15 @@ link: asteroid-belt
                 <h2 class="paragraphheader" id="Groups">Groups</h2>
                 <p class="paragraph">
                     The inner main belt asteroids are located within the Kirkwood gap that corresponds with 3:1 orbital resonance with Jupiter.
-                    The largest members are Vesta, Fortuna, and Iris.
+                    The largest members are Vesta, <a href="fortuna.html">Fortuna</a>, and Iris.
                 </p>
                 <p class="paragraph">
                     The intermediate main belt is located between the gaps corresponding to 3:1 and 5:2 resonances.
-                    The largest members are Ceres, Pallas, and Eunomia.
+                    The largest members are Ceres, Pallas, and <a href="eunomia.html">Eunomia</a>.
                 </p>
                 <p class="paragraph">
                     The outer main belt is the region outside the 5:2 orbital resonance.
-                    The largest members are <a href="hygiea.html">Hygiea</a>, Interamnia, and Europa.
+                    The largest members are <a href="hygiea.html">Hygiea</a>, <a href="interamnia.html">Interamnia</a>, and <a href="europa-asteroid.html">Europa</a>.
                 </p>
                 <p class="paragraph">
                     There are also a few groups within the belt that are resonant with Jupiter, notably the Alinda and Griqua groups.
@@ -62,22 +62,22 @@ link: asteroid-belt
                             <th><a href="hygiea.html">10 Hygiea</a></th><th>433±8</th><th>1849</th><th>de Gasparis, A.</th><th>C</th>
                         </tr>
                         <tr>
-                            <th>704 Interamnia</th><th>332±5</th><th>1910</th><th>Cerulli, V.</th><th>F</th>
+                            <th><a href="interamnia.html">704 Interamnia</a></th><th>332±5</th><th>1910</th><th>Cerulli, V.</th><th>F</th>
                         </tr>
                         <tr>
-                            <th>52 Europa</th><th>319±4</th><th>1858</th><th>Goldschmidt, H.</th><th>C</th>
+                            <th><a href="europa-asteroid.html">52 Europa</a></th><th>319±4</th><th>1858</th><th>Goldschmidt, H.</th><th>C</th>
                         </tr>
                         <tr>
-                            <th>511 Davida</th><th>298±4</th><th>1903</th><th>Dugan, R. S.</th><th>C</th>
+                            <th><a href="davida.html">511 Davida</a></th><th>298±4</th><th>1903</th><th>Dugan, R. S.</th><th>C</th>
                         </tr>
                         <tr>
-                            <th>87 Sylvia</th><th>274±4</th><th>1866</th><th>Pogson, N. R.</th><th>X</th>
+                            <th><a href="sylvia.html">87 Sylvia</a></th><th>274±4</th><th>1866</th><th>Pogson, N. R.</th><th>X</th>
                         </tr>
                         <tr>
-                            <th>15 Eunomia</th><th>270±3</th><th>1851</th><th>de Gasparis, A.</th><th>S</th>
+                            <th><a href="eunomia.html">15 Eunomia</a></th><th>270±3</th><th>1851</th><th>de Gasparis, A.</th><th>S</th>
                         </tr>
                         <tr>
-                            <th>31 Euphrosyne</th><th>268±4</th><th>1854</th><th>Ferguson, J.</th><th>C</th>
+                            <th><a href="euphrosyne.html">31 Euphrosyne</a></th><th>268±4</th><th>1854</th><th>Ferguson, J.</th><th>C</th>
                         </tr>
                     </table>
                 </div>
@@ -140,6 +140,46 @@ link: asteroid-belt
                         So far, it hasn't been visited by a probe.
                     </p>
                 </div>
+                <div class="articlediv">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/asteroids/ida.jpg" alt="Ida">
+                        <p class="caption">Ida and its small moon Dactyl</p>
+                    </div>
+                    <h2 class="paragraphsubheader" id="Exploration">Exploration</h2>
+                    <p class="paragraph">
+                        The first spacecraft to make close flybys of the asteroids in the asteroid belt was the Galileo mission while on its way to Jupiter, which encountered the asteroids Gaspra and Ida in 1991 and 1993 respectively.
+                        It was found that Ida has a small moon orbiting it, named Dactyl.
+                        Other asteroids that were visited by spacecraft on their way to other objects include Annefrank by Stardust and Lutetia and Šteins by Rosetta. 
+                        NEAR Shoemaker, launched in 1996, was also the first dedicated asteroid mission, which first passed by the main-belt Mathilde, after which it entered orbit around near-Earth asteroid Eros.
+                        Lucy, a NASA mission that will be the first to visit the Jupiter trojans also encountered two main-belt asteroids.
+                        The first, Dinkinesh, was interesting in that it had a satellite, named Selam, which was a contact binary.
+                        The second asteroid, Donaldjohanson, was itself another contact binary.
+                    </p>
+                    <p class="paragraph">
+                        The spacecraft Dawn was a mission, launched in 2007, sent to visit the two largest asteroids - Ceres and Vesta.
+                        It orbited Vesta for one year, after which it left for Ceres.
+                        The orbiter operated there for three years before losing contact, still in orbit to this day.
+                    </p>
+                </div>
+                <div class="articlediv">
+                    <div class="captionbox right h120">
+                        <img class="articleimage" src="../assets/images/asteroids/psyche.png" alt="Psyche">
+                        <img class="articleimage" src="../assets/images/other/psyche-illustration.jpg" alt="Psyche artist impression">
+                        <p class="caption">Psyche, seen by the VLT (<a href="https://commons.wikimedia.org/wiki/File:Psyche_VLT.png">Source</a>) and an artist impression by NASA</p>
+                    </div>
+                    <p class="paragraph">
+                        One new NASA mission on its way to a main-belt asteroid is Psyche.
+                        It will enter orbit around <a href="psyche.html">the asteroid of the same name</a> for 20 months.
+                        The reason that Psyche was selected for the mission is due to its metallic composition.
+                        While Lutetia, a previously visited asteroid, is an M-type spectra, data suggests that it is much richer in metals.
+                        Psyche will see if Psyche is an exposed metal core of a protoplanet, or a stone with regolith consisting of metal-rich compounds.
+                    </p>
+                    <p class="paragraph">
+                        Another upcoming mission is MBR Explorer, planned by the UAE Space Agency.
+                        It will first fly by six asteroids - Westerwald, Chimaera, Rockox, Ghaf, Ousha, and Moza.
+                        Then, it will orbit a seventh, Justitia, and lastly land, examining the prospects of asteroid mining.
+                        Justitia is an unusually red asteroid, suggesting it is tholin-rich and has likely migrated from the outer Solar System. 
+                    </p>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
                     <li>
