--- a/pages/asteroid.html
+++ b/pages/asteroid.html
@@ -28,7 +28,7 @@ link: asteroid
                     It was named <a href="ceres.html">Ceres</a> after the Roman goddess of harvest.
                 </p>
                 <p class="paragraph">
-                    Soon, other objects were discovered - Pallas, Juno, <a href="vesta.html">Vesta</a>, and Astraea. 
+                    Soon, other objects were discovered - Pallas, <a href="juno-asteroid.html">Juno</a>, <a href="vesta.html">Vesta</a>, and Astraea. 
                     William Herschel suggested the term "asteroid" (star-like), since their apparent sizes were smaller than those of stars.
                 </p>
                 <p class="paragraph">
@@ -79,15 +79,15 @@ link: asteroid
                     </p>
                     <p class="paragraph">
                         The inner main belt asteroids are located within the Kirkwood gap that corresponds with 3:1 orbital resonance with Jupiter.
-                        The largest members are Vesta, Fortuna, and Iris.
+                        The largest members are Vesta, <a href="fortuna.html">Fortuna</a>, and Iris.
                     </p>
                     <p class="paragraph">
                         The intermediate main belt is located between the gaps corresponding to 3:1 and 5:2 resonances.
-                        The largest members are Ceres, Pallas, and Eunomia.
+                        The largest members are Ceres, Pallas, and <a href="eunomia.html">Eunomia</a>.
                     </p>
                     <p class="paragraph">
                         The outer main belt is the region outside the 5:2 orbital resonance.
-                        The largest members are Hygiea, Interamnia, and Europa.
+                        The largest members are Hygiea, <a href="interamnia.html">Interamnia</a>, and <a href="europa-asteroid.html">Europa</a>.
                     </p>
                     <p class="paragraph">
                         There are also a few groups within the belt that are resonant with Jupiter, notably the Alinda and Griqua groups.
@@ -104,7 +104,7 @@ link: asteroid
                     Jupiter features the highest population of trojans.
                     They are named after characters from Greek mythology that have fought in the Trojan war, hence the name.
                     The largest L4 trojans have Greek names, while the L5 have Trojan names.
-                    Exceptions are Hektor (a Trojan prince) and Patroclus (a Greek hero), which are part of their respective enemy camp, as they were named before the convention.
+                    Exceptions are <a href="hektor.html">Hektor</a> (a Trojan prince) and Patroclus (a Greek hero), which are part of their respective enemy camp, as they were named before the convention.
                     Hektor is the biggest of the trojan asteroids and is the 12th biggest overall.
                     The Lucy mission by NASA is expected to visit several Trojan asteroids, starting with Eurybates in 2027.
                 </p>
@@ -183,7 +183,7 @@ link: asteroid
                     <h2 class="paragraphsubheader" id="Exploration">Exploration</h2>
                     <p class="paragraph">
                         The first spacecraft to make close flybys of asteroids was the Galileo mission to Jupiter, which encountered the asteroids Gaspra and Ida in 1991 and 1993 respectively.
-                        Other asteroids that were visited by spacecrafts on their way to other objects include Annefrank by Stardust, Braille by Deep Space 1, Lutetia and Šteins by Rosetta, and Toutatis by Chang'e 2, 
+                        Other asteroids that were visited by spacecraft on their way to other objects include Annefrank by Stardust, Braille by Deep Space 1, Lutetia and Šteins by Rosetta, and Toutatis by Chang'e 2, 
                     </p>
                     <p class="paragraph">
                         The first dedicated asteroid mission was NEAR Shoemaker, launched in 1996, which first passed by the main-belt Mathilde, after which it entered orbit around near-Earth asteroid Eros.
@@ -196,7 +196,7 @@ link: asteroid
                         Hayabusa, launched by JAXA in 2003, was the first sample return mission.
                         It visited the small near-Eart asteroid Itokawa, after which it returned a capsule of regolith back to Earth.
                         A follow-up mission, Hayabusa-2, visited another asteroid - Ryugu.
-                        The samples returned contained not just silicate rocks, water ice, and simple organics, but also kore complex organic compounds like uracil and vitamin B3.
+                        The samples returned contained not just silicate rocks, water ice, and simple organics, but also more complex organic compounds like uracil and vitamin B3.
                         The spacecraft's mission has been extended and will now visit two more asteroids.
                         Meanwhile, the NASA mission OSIRIS-REx mapped extensively the potentially-hazardous asteroid Bennu after which it landed to collect regolith.
                         The returned sample showed the presence of amino acids and all nucleobases for DNA and RNA.
@@ -210,32 +210,39 @@ link: asteroid
                         Hera, a follow-up mission by ESA is on its way to the system to further investigate the system.
                     </p>
                 </div>
-                <h3 class="paragraphsubheader" id="UpcomingMissions">Upcoming missions</h3>
-                <p class="paragraph">
-                    After Hayabusa 2#'s visit of Torifune and Hera's visit of the Didymos system, the next mission to an asteroid is Tianwen-2, launched in 2025.
-                    This will be the fifth sample return of an asteroid and the second asteroid visited by CNSA, the target being Kamo'oalewa.
-                    The spacecraft will then return a capsule and go for its second target, the asteroid 311P/PanSTARRS.
-                    CNSA is also proposing a deflection test mission this decade.
-                </p>
-                <p class="paragraph">
-                    Lucy is a NASA mission that will be the first to visit the Jupiter trojans.
-                    On its way to the system, the spacecraft has already encountered the main-belt asteroids Dinkinesh and Donaldjohanson.
-                    When it reaches the Greek camp, it will make flybys of four asteroids, and then go to the Trojan camp, making a flyby of Patroclus.
-                </p>
-                <p class="paragraph">
-                    Another NASA mission on its way to an asteroid is Psyche.
-                    It will enter orbit around the asteroid of the same name for 20 months.
-                    The reason that Psyche was selected for the mission is due to its metallic composition.
-                    While Lutetia, a previously visited asteroid, is an M-type spectra, data suggests that it is much richer in metals.
-                    Psyche will see if Psyche is an exposed metal core of a protoplanet, or a stone with regolith consisting of metal-rich compounds.
-                </p>
-                <p class="paragraph">
-                    JAXA is sending a tech demonstration spacecraft DESTINY+ to the asteroid Phaethon, parent body of the Geminids meteor shower.
-                    It will collect samples from the dust it leaves behind.
-                    Another upcoming mission is MBR Explorer, planned by the UAE Space Agency.
-                    It will fly by six asteroids before landing on a seventh, Justitia, examining the prospects of asteroid mining.
-                    Justitia is an unusually red asteroid, suggesting it is tholin-rich and has likely migrated from the outer Solar System. 
-                </p>
+                <div class="articlediv">
+                    <div class="captionbox right h120">
+                        <img class="articleimage" src="../assets/images/asteroids/psyche.png" alt="Psyche">
+                        <img class="articleimage" src="../assets/images/other/psyche-illustration.jpg" alt="Psyche artist impression">
+                        <p class="caption">Psyche, seen by the VLT (<a href="https://commons.wikimedia.org/wiki/File:Psyche_VLT.png">Source</a>) and an artist impression by NASA</p>
+                    </div>
+                    <h3 class="paragraphsubheader" id="UpcomingMissions">Upcoming missions</h3>
+                    <p class="paragraph">
+                        After Hayabusa 2#'s visit of Torifune and Hera's visit of the Didymos system, the next mission to an asteroid is Tianwen-2, launched in 2025.
+                        This will be the fifth sample return of an asteroid and the second asteroid visited by CNSA, the target being Kamo'oalewa.
+                        The spacecraft will then return a capsule and go for its second target, the asteroid 311P/PanSTARRS.
+                        CNSA is also proposing a deflection test mission this decade.
+                    </p>
+                    <p class="paragraph">
+                        Lucy is a NASA mission that will be the first to visit the Jupiter trojans.
+                        On its way to the system, the spacecraft has already encountered the main-belt asteroids Dinkinesh and Donaldjohanson.
+                        When it reaches the Greek camp, it will make flybys of four asteroids, and then go to the Trojan camp, making a flyby of Patroclus.
+                    </p>
+                    <p class="paragraph">
+                        Another NASA mission on its way to an asteroid is Psyche.
+                        It will enter orbit around <a href="psyche.html">the asteroid of the same name</a> for 20 months.
+                        The reason that Psyche was selected for the mission is due to its metallic composition.
+                        While Lutetia, a previously visited asteroid, is an M-type spectra, data suggests that it is much richer in metals.
+                        Psyche will see if Psyche is an exposed metal core of a protoplanet, or a stone with regolith consisting of metal-rich compounds.
+                    </p>
+                    <p class="paragraph">
+                        JAXA is sending a tech demonstration spacecraft DESTINY+ to the asteroid Phaethon, parent body of the Geminids meteor shower.
+                        It will collect samples from the dust it leaves behind.
+                        Another upcoming mission is MBR Explorer, planned by the UAE Space Agency.
+                        It will fly by six asteroids before landing on a seventh, Justitia, examining the prospects of asteroid mining.
+                        Justitia is an unusually red asteroid, suggesting it is tholin-rich and has likely migrated from the outer Solar System. 
+                    </p>
+                </div>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
                     <li>
