--- a/pages/ceres.html
+++ b/pages/ceres.html
@@ -13,7 +13,7 @@ link: ceres
                     <p class="paragraph">
                         Ceres is the biggest of the <a href="asteroid.html">asteroids</a> in the <a href="asteroid-belt.html">asteroid belt</a> and is the only <a href="dwarf-planet.html">dwarf planet</a> in the belt. 
                         It is named after the Roman goddess of agriculture and fertility. 
-                        It was discovered in 1801 and was thought to be a <a href="planet.html">planet</a>, before other smaller bodies like <a href="pallas.html">Pallas</a>, Juno, and <a href="vesta.html">Vesta</a> were discovered.
+                        It was discovered in 1801 and was thought to be a <a href="planet.html">planet</a>, before other smaller bodies like <a href="pallas.html">Pallas</a>, <a href="juno-asteroid.html">Juno</a>, and <a href="vesta.html">Vesta</a> were discovered.
                         The surface of the asteroid consists of ice and carbonates. 
                         Cryovolcanic activity shapes the surface of the dwarf planet, thanks to which many bright spots in craters and a single cryovolcanic mountain (Ahuna Mons) exist.
                     </p>
@@ -114,18 +114,24 @@ link: ceres
                         There are several other features, including Samhain Catenae, which are potential tectonic fault lines.
                     </p>
                 </div>
-                <h2 class="paragraphheader" id="Exploration">Exploration</h2>
-                <p class="paragraph">
-                    Ceres has been observed from Earth before it was visited by a spacecraft.
-                    Hubble imagery was able to differentiate its round shape and numerous albedo features.
-                </p>
-                <p class="paragraph">
-                    NASA's Dawn was the first to visit Ceres and Vesta, the two biggest asteroids.
-                    During its Ceres orbiting phase, Dawn gathered data about its composition, surface, and cryovolcanism.
-                </p>
-                <p class="paragraph">
-                    Both the ESA and CNSA (China) are considering sample return missions to the Occator crater.
-                </p>
+                <div class="articlediv">
+                    <div class="captionbox right h120">
+                        <img class="articleimage" src="../assets/images/spacecraft/dawn.png" alt="Dawn">
+                        <p class="caption">Dawn probe</p>
+                    </div>
+                    <h2 class="paragraphheader" id="Exploration">Exploration</h2>
+                    <p class="paragraph">
+                        Ceres has been observed from Earth before it was visited by a spacecraft.
+                        Hubble imagery was able to differentiate its round shape and numerous albedo features.
+                    </p>
+                    <p class="paragraph">
+                        NASA's Dawn was the first to visit Ceres and Vesta, the two biggest asteroids.
+                        During its Ceres orbiting phase, Dawn gathered data about its composition, surface, and cryovolcanism.
+                    </p>
+                    <p class="paragraph">
+                        Both the ESA and CNSA (China) are considering sample return missions to the Occator crater.
+                    </p>
+                </div>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
                     <li>
