--- a/pages/dwarf-planet.html
+++ b/pages/dwarf-planet.html
@@ -56,7 +56,7 @@ link: dwarf-planet
                 </p>
                 <p class="paragraph">
                     The roundness of a minor planet is harder to prove.
-                    Of the five official dwarf planets, only Ceres and Pluto were visited by spacecrafts.
+                    Of the five official dwarf planets, only Ceres and Pluto were visited by spacecraft.
                     The largest asteroids have been observed from <a href="earth.html">Earth</a> and none (apart from Ceres) are round.
                     <a href="vesta.html">Vesta</a> has been in hydrostatic equilibrium and has differentiated interior, but lost its round form after a collision event.
                     <a href="pallas.html">Pallas</a> and <a href="hygiea.html">Hygiea</a> are also close to round shapes. 
@@ -266,7 +266,7 @@ link: dwarf-planet
                     <p class="paragraph">
                         Ceres is the biggest of the asteroids in the asteroid belt and is the only dwarf planet in the belt. 
                         It is named after the Roman goddess of agriculture and fertility. 
-                        It was discovered in 1801 and was thought to be a planet, before other smaller bodies like Pallas, Juno, and Vesta were discovered.
+                        It was discovered in 1801 and was thought to be a planet, before other smaller bodies like Pallas, <a href="juno-asteroid.html">Juno</a>, and Vesta were discovered.
                         The surface of the asteroid consists of ice and carbonates. 
                         Cryovolcanism activity shapes the surface of the dwarf planet, thanks to which many bright spots in craters and a single mountain (Ahuna Mons) exist.
                     </p>
