--- a/pages/earth.html
+++ b/pages/earth.html
@@ -229,7 +229,7 @@ link: earth
                 </div>
                 <div class="articlediv">
                     <div class="captionbox right h240">
-                        <img class="articleimage" src="../assets/images/spacecrafts/sputnik-1.png" alt="Sputnik 1">
+                        <img class="articleimage" src="../assets/images/spacecraft/sputnik-1.png" alt="Sputnik 1">
                         <p class="caption">Sputnik 1 model</p>
                     </div>
                     <h2 class="paragraphsubheader" id="SpaceExploration">Space exploration</h2>
@@ -246,7 +246,7 @@ link: earth
                     <p class="paragraph">
                         In 1961, after three more missions with dogs on board, Soviet cosmonaut Yuri Gagarin became the first human in space and to orbit Earth aboard Vostok 1.
                         The spaceflight consisted of a single orbit after which Gagarin would descend with a parachute landing in Saratov Oblast, Russian SSR.
-                        Five more Vostok spacecrafts were sent in orbit, each with one crewman.
+                        Five more Vostok spacecraft were sent in orbit, each with one crewman.
                         In 1962, as part of Project Mercury, John Glenn becomes the first American to orbit Earth aboard Friendship 7, following Alan Sheppard's suborbital flight the previous year aboard Freedom 7.
                         USSR's Voskhod programme included two crewed missions, sending five people in total, with Alexei Leonov performing the first spacewalk during the Voskhod 2 mission. 
                         Meanwhile, the American Gemini programme found success in performing space rendezvous (Gemini 6 and 7) and docking (Gemini 8), previously attempted during Vostok 3 and 4
@@ -265,7 +265,7 @@ link: earth
                 </div>
                 <div class="articlediv">
                     <div class="captionbox right h240">
-                        <img class="articleimage" src="../assets/images/spacecrafts/iss.jpg" alt="ISS">
+                        <img class="articleimage" src="../assets/images/spacecraft/iss.jpg" alt="ISS">
                         <p class="caption">The ISS in 2010</p>
                     </div>
                     <h3 class="paragraphsubheader" id="ISSAndSpaceTelescopes">ISS and space telescopes</h3>
