--- a/pages/europa.html
+++ b/pages/europa.html
@@ -10,12 +10,13 @@ link: europa
                         <img class="articleimage" src="../assets/images/natural-satellites/europa.png" alt="Europa">
                         <p class="caption">Europa</p>
                     </div>
+                    <p class="readmore">For the asteroid of the same name, see <a href="europa-asteroid.html">52 Europa</a></p>
                     <p class="paragraph">
                         Europa is the smallest of the four <a href="satellites-of-jupiter.html">Galilean moons</a> and is slightly smaller than <a href="earth.html">Earth</a>'s <a href="moon.html">Moon</a>.
                         It was discovered by Galileo Galilei in 1610 and is named after the mother of King Minos of Crete and lover of Zeus from Greek mythology.
                     </p>
                     <p class="paragraph">
-                        It's icy surface is smooth, full of dark streaks and has hardly any craters.
+                        Its icy surface is smooth, full of dark streaks and has hardly any craters.
                         It is speculated that Europa could have a subsurface ocean where extraterrestrial life could exist.
                         This is also the case on <a href="ganymede.html">Ganymede</a> and <a href="callisto.html">Callisto</a>, but the ocean of Europa shapes the surface more actively than on the other two moons and the possibility of life there is more promising on theory due to number of factors.
                         A similar satellite is <a href="saturn.html">Saturn</a>'s <a href="natural-satellite.html">moon</a> <a href="enceladus.html">Enceladus</a>, which also has a smooth and icy surface, an active, tidally heated interior, and a direct contact between the rocky core and the liquid ocean.
@@ -122,7 +123,7 @@ link: europa
                 </p>
                 <div class="articlediv">
                     <div class="captionbox right h240">
-                        <img class="articleimage" src="../assets/images/spacecrafts/europa-clipper.png" alt="Europa Clipper">
+                        <img class="articleimage" src="../assets/images/spacecraft/europa-clipper.png" alt="Europa Clipper">
                         <p class="caption">Europa Clipper, a NASA spacecraft</p>
                     </div>
                     <h3 class="paragraphsubheader" id="FutureMissions">Future missions</h3>
