--- a/pages/gonggong.html
+++ b/pages/gonggong.html
@@ -84,7 +84,7 @@ link: gonggong
                 </p>
                 <h2 class="paragraphheader" id="Exploration">Exploration</h2>
                 <p class="paragraph">
-                    Gonggong has not been visited by any spacecrafts.
+                    Gonggong has not been visited by any spacecraft.
                     A flyby mission could take just under 25 years using a <a href="jupiter.html">Jupiter</a> gravity assist, based on a launch date of 2030 or 2031.
                     Gonggong would be approximately 95 AU from the Sun when the spacecraft arrives.
                 </p>
