--- a/pages/hyperion.html
+++ b/pages/hyperion.html
@@ -79,7 +79,7 @@ link: hyperion
                 </div>
                 <h2 class="paragraphheader" id="Exploration">Exploration</h2>
                 <p class="paragraph">
-                    Hyperion has been visited by several spacecrafts.
+                    Hyperion has been visited by several spacecraft.
                     The first to transmit images was Voyager 2, but it only revealed its irregular shape and some craters and dark spots, without much else.
                     The Cassini orbiter performed several distant flybys of Hyperion, with the closest approach on September 26, 2005, at a distance of just 500 kilometers.
                     This flyby revealed the moon’s sponge-like surface in detail.
