--- a/pages/jupiter.html
+++ b/pages/jupiter.html
@@ -64,7 +64,7 @@ link: jupiter
                     A large group of <a href="asteroid.html">asteroids</a> co-orbits with Jupiter, known as trojans.
                     These asteroids are divided into two groups: the Greek camp, clustered around the leading Lagrange point (L4), and the Trojan camp, around the trailing Lagrange point (L5).
                     As of August 2025, there are 15,283 trojan asteroids according to the Minor Planet Center.
-                    The Greek camp contains 9,691 known trojans, with the largest being 624 Hektor, 911 Agamemnon, and 588 Achilles.
+                    The Greek camp contains 9,691 known trojans, with the largest being <a href="hektor.html">624 Hektor</a>, 911 Agamemnon, and 588 Achilles.
                     The Trojan camp, meanwhile, includes 5,592 known asteroids, with the most prominent being the binary 617 Patroclus-Menoetius, 3451 Mentor, and 3317 Paris.
                 </p>
                 <p class="paragraph">
@@ -254,7 +254,7 @@ link: jupiter
                 </p>
                 <div class="articlediv">
                     <div class="captionbox right h240">
-                        <img class="articleimage" src="../assets/images/spacecrafts/juno-orbiter.png" alt="Juno">
+                        <img class="articleimage" src="../assets/images/spacecraft/juno-orbiter.png" alt="Juno">
                         <p class="caption">Model of NASA's spacecraft Juno</p>
                     </div>
                     <h2 class="paragraphheader" id="Exploration">Exploration</h2>
