--- a/pages/mercury.html
+++ b/pages/mercury.html
@@ -27,7 +27,7 @@ link: mercury
                         Mercury has no natural satellites.
                     </p>
                     <p class="paragraph">
-                        Two spacecrafts have visited Mercury - Mariner 10 and MESSENGER. A third, BepiColombo, is an ongoing mission, which will enter an orbit in 2026.
+                        Two spacecraft have visited Mercury - Mariner 10 and MESSENGER. A third, BepiColombo, is an ongoing mission, which will enter an orbit in 2026.
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="Name">Name</h2>
