--- a/pages/moon.html
+++ b/pages/moon.html
@@ -23,7 +23,7 @@ link: moon
                         The Moon has no magnetic field, liquid water, or a significant athmosphere, but it has ice present on the poles.
                     </p>
                     <p class="paragraph">
-                        The Moon has been visited by multiple spacecrafts.
+                        The Moon has been visited by multiple spacecraft.
                         The first object to do so was Luna 2.
                         During the Apollo program, 12 men landed on the moon.
                         Currently the Artemis program is going to land people almost fifty years after the last Apollo mission, with the intention to eventually make an American base on the Moon.
@@ -199,7 +199,7 @@ link: moon
                 <h2 class="paragraphheader" id="Exploration">Exploration</h2>
                 <div class="articlediv">
                     <div class="captionbox right h180">
-                        <img class="articleimage" src="../assets/images/spacecrafts/luna-10.jpg" alt="Luna 10">
+                        <img class="articleimage" src="../assets/images/spacecraft/luna-10.jpg" alt="Luna 10">
                         <p class="caption">Mockup of Luna 10. <a href="https://commons.wikimedia.org/wiki/File:Total_Lunar_Eclipse_of_November_8_2022.jp://commons.wikimedia.org/wiki/File:Luna_10_Musee_du_Bourget_P1010504.JPG">Source</a></p>
                     </div>
                     <h3 class="paragraphsubheader" id="LunaProgram">Luna program</h3>
@@ -269,7 +269,7 @@ link: moon
                         The first mission after that period was the Japanese Hiten mission.
                     </p>
                     <p class="paragraph">
-                        NASA sent multiple spacecrafts, including Artemis I, part of the Artemis program and follow-up to the Apollo Mission.
+                        NASA sent multiple spacecraft, including Artemis I, part of the Artemis program and follow-up to the Apollo Mission.
                         Artemis I was an uncrewed mission to the Moon and is going to be followed by Artemis II, a crewed Moon-orbiting mission and Artemis III and IV, crewed Moon-landing missions.
                         Later Artemis missions are planned to send payload and astronauts for a longer stay on the Moon.
                         Multiple CubeSats were deployed during Artemis I, some of which still in operations.
