--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -153,8 +153,8 @@ link: neptune
                 </div>
                 <div class="articlediv">
                     <div class="captionbox right h180">
-                        <img class="articleimage" src="../assets/images/spacecrafts/voyager.png" alt="Voyager">
-                        <p class="caption">A model of the two Voyager spacecrafts. Voyager 2 made a flyby of Neptune.</p>
+                        <img class="articleimage" src="../assets/images/spacecraft/voyager.png" alt="Voyager">
+                        <p class="caption">A model of the two Voyager spacecraft. Voyager 2 made a flyby of Neptune.</p>
                     </div>
                     <h2 class="paragraphheader" id="Exploration">Exploration</h2>
                     <p class="paragraph">
