--- a/pages/satellites-of-jupiter.html
+++ b/pages/satellites-of-jupiter.html
@@ -150,9 +150,9 @@ link: satellites-of-jupiter
                 </p>
                 <h2 class="paragraphheader" id="Exploration">Exploration</h2>
                 <p class="paragraph">
-                    Multiple spacecrafts have visited Jupiter and its satellites.
+                    Multiple spacecraft have visited Jupiter and its satellites.
                     First to reach Jupiter was Pioneer 10, followed by Pioneer 11 one year later.
-                    The two spacecrafts made the first close-up images of the moons.
+                    The two spacecraft made the first close-up images of the moons.
                     Voyager 1 and 2 also observed the Galilean moons and found a few of the smaller ones.
                     Two Jupiter orbiter missions - Galileo and Juno - gathered more in-depth data about the unique Galilean moons, which would lead to the development of several dedicated missions.
                     Juno is also potentially getting another mission extension to study the inner moons.
