--- a/pages/solar-system.html
+++ b/pages/solar-system.html
@@ -149,8 +149,8 @@ link: solar-system
                     Far from the Kuiper belt lies the heliopause, which is the greatest extent of the so-called heliosphere.
                     This is the greatest extend of the solar magnetosphere and solar winds.
                     Beyond the heliopause lies interstellar space.
-                    Two spacecrafts are known to have left the heliosphere - Voyager 1 and 2 - and three others are on their way - Pioneer 10 and 11, and New Horizons.
-                    Contact with the Pioneer spacecrafts has been lost, so the exact moment they cross the heliopause will be uncertain.
+                    Two spacecraft are known to have left the heliosphere - Voyager 1 and 2 - and three others are on their way - Pioneer 10 and 11, and New Horizons.
+                    Contact with the Pioneer spacecraft has been lost, so the exact moment they cross the heliopause will be uncertain.
                 </p>
                 <p class="paragraph">
                     The Oort cloud is a theoretical spherical shell of icy objects believed to surround the Solar System at distances up to 100,000 astronomical units (AU).
