--- a/pages/universe.html
+++ b/pages/universe.html
@@ -6,9 +6,9 @@ link: universe
 ---
 
                 <div class="articlediv">
-                    <!--<div class="captionbox right" style="width:242px">
-                        <img class="articleimage" src="../assets/images/stars/sun.jpg" alt="Sun" width="240" height="240">
-                        <p class="caption">The Sun is a G-type star</p>
+                    <!--<div class="captionbox right">
+                        <img class="articleimage" src="../assets/images//." alt="">
+                        <p class="caption"></p>
                     </div>-->
                     <p class="paragraph">
                         The universe is all of space and time, and their contents.
