--- a/pages/venus.html
+++ b/pages/venus.html
@@ -147,7 +147,7 @@ link: venus
                 <div class="articlediv">
                     <h2 class="paragraphheader" id="Exploration">Exploration</h2>
                     <p class="paragraph">
-                        Venus was the first planet (other than <a href="earth.html">Earth</a>) visited by spacecrafts.
+                        Venus was the first planet (other than <a href="earth.html">Earth</a>) visited by spacecraft.
                         The first mission was the soviet Venera 1, but it lost communication on its way to the planet.
                         Mariner 2 was the first spacecraft to successfully reach Venus, flying past it in 1962.
                         The first to enter the atmosphere was Venera 4, which measured the surface temperature and atmosphere.
