--- a/pages/vesta.html
+++ b/pages/vesta.html
@@ -26,7 +26,7 @@ link: vesta
                     This was suggested by the recently formulated Titius-Bode law, according to which the distances of planets followed a progression.
                     It also led to the discovery of <a href="uranus.html">Uranus</a> beyond the orbit of <a href="saturn.html">Saturn</a>.
                     Three years after their first congress, Ceres was discovered in this gap and was refered to as a planet.
-                    However, other members of the "celestial police" discovered other "planets" like Pallas and Juno, and they started to suspect that Ceres was not a planet.
+                    However, other members of the "celestial police" discovered other "planets" like <a href="pallas.html">Pallas</a> and <a href="juno-asteroid.html">Juno</a>, and they started to suspect that Ceres was not a planet.
                     Thus, a new class of objects was created - asteroids.
                 </p>
                 <p class="paragraph">
@@ -101,7 +101,7 @@ link: vesta
                     </div>
                     <h3 class="paragraphsubheader" id="ExternalStructure">External structure</h3>
                     <p class="paragraph">
-                        Vesta is a stony V-class (Vestoid) asteroid, which means that the surface is comprised of basalt.
+                        Vesta is a stony V-class (Vestoid) asteroid, with a surface composition comprised of basalt.
                     </p>
                     <p class="paragraph">
                         There are two significant features on the surface of Vesta - Rheasilvia and Veneneia.
@@ -123,9 +123,14 @@ link: vesta
                         Outside Vestalia, three close craters - Marcia, Calpurnia, and Minucia - make up a recognisable chain that resembles a snowman.
                     </p>
                 </div>
+                <div class="articlediv">
+                    <div class="captionbox right h120">
+                        <img class="articleimage" src="../assets/images/spacecraft/dawn.png" alt="Dawn">
+                        <p class="caption">Dawn probe</p>
+                    </div>
                 <h2 class="paragraphheader" id="Exploration">Exploration</h2>
                 <p class="paragraph">
-                    Of all the asteroids, it appears the brightest on Earth since it is the second largest, and is relatively bright and close to the Sun.
+                    Of all the asteroids, Vesta appears the brightest on Earth since it is the second largest, and is relatively bright and close to the Sun.
                     Vesta has been observed from Earth before it was visited by a spacecraft.
                     Hubble Space Telescope imagery was able to differentiate the largest basins like Rheasilvia, Veneneia, and Feralia.
                 </p>
@@ -133,6 +138,7 @@ link: vesta
                     NASA's Dawn was the first to visit Ceres and Vesta, the two biggest asteroids.
                     During its Vesta orbiting phase, Dawn gathered data about its geology and surface for one year before heading to Ceres.
                 </p>
+                </div>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
                     <li>
